--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.26.1"
 notify-rust = "4.8.0"
 postgres = "*"
 sysinfo = "0.28.4"
 tokio = "1.26.0"
+tui = "0.19.0"
