(macros) a lot of code generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 crossterm = "0.26.1"
 glob = "0.3.1"
 notify-rust = "4.8.0"
+paste = "1.0.12"
 postgres = "*"
 sysinfo = "0.28.4"
 tokio = "1.26.0"
